# learning-rabbitmq

./: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
learning_rabbitmq/rabbitmq_tutorial/1_hello_world/: receive.py
learning_rabbitmq/rabbitmq_tutorial/2_work_queues/: new_task.py  worker.py
learning_rabbitmq/rabbitmq_tutorial/3_publish_subscribe/: emit_log_publish.py  receive_logs_publish.py
learning_rabbitmq/rabbitmq_tutorial/4_routing/: emit_log_routing.py  receive_logs_routing.py
learning_rabbitmq/rabbitmq_tutorial/5_topics/: emit_log_topic.py  receive_logs_topic.py
learning_rabbitmq/rabbitmq_tutorial/6_rpc/: rpc_client.py  rpc_server.py
learning_rabbitmq/samples/consumer_that_produces/: consumer_1.py  consumer_2.py  consumer_producer.py  flow.drawio  initial_producer.py  last_consumer.py  producer.py
learning_rabbitmq/samples/dead_letter_exchange/: consumer.py  flow.drawio  producer.py  settings.py
learning_rabbitmq/samples/dlx_with_ttl/: main.py
learning_rabbitmq/samples/handling_redelivery_attempts/: config.py  consumer.py  dlx_handler.py  producer.py
