[tool.poetry]
name = "learning_rabbitmq"
version = "0.1.0"
description = "Repository dedicated to study and learning somethings about RabbitMQ."
authors = ["Daniel Bailo <danbailoufms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"
mypy-extensions = "^1.0.0"
ipdb = "^0.13.13"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I", "F", "T100"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.pylint]
max-returns = 2

[tool.mypy]
disable_error_code = [
    "union-attr", "import-untyped", "arg-type",
    "return-value", "return", "override",
    "assignment", "var-annotated"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"